Update ai adviser 2.html

--- a/ai adviser 2.html
+++ b/ai adviser 2.html
@@ -89,7 +89,7 @@
     }
 </style>
 
-<div class="overlay" id="vpnAlert2">
+<div class="overlay" id="vpnAlert">
     <div class="alert-box wide">
         <div class="responsive-iframe-container">
             <iframe
